--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "history": "^5.0.0",
+    "i": "^0.3.6",
+    "marked": "^2.1.3",
+    "npm": "^7.19.0",
     "react": "^17.0.2",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
@@ -40,7 +44,6 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
-    "react-editor-js": "^1.9.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
   }
 }
