--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "highlight.js": "^11.0.1",
     "history": "^5.0.0",
     "i": "^0.3.6",
     "marked": "^2.1.3",
