--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "snarkdown": "^2.0.0"
   },
   "scripts": {
     "start": "craco start",
