--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "craco start",
