--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "axios": "^0.21.1",
     "highlight.js": "^11.0.1",
     "history": "^5.0.0",
-    "i": "^0.3.6",
     "markdown-it": "^12.1.0",
     "markdown-to-text": "^0.1.1",
-    "marked": "^2.1.3",
     "npm": "^7.19.0",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
@@ -22,8 +20,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "craco start",
